--- a/docs/phil/making it explicit.qmd
+++ b/docs/phil/making it explicit.qmd
@@ -2,6 +2,15 @@
 title: Making it Explicit
 tags: 
  - work
+
+listing:
+  id: backlinks
+  type: table
+  page-size: 100000
+  filter-ui: true
+  template: "../../ejs/custom.ejs"
+  contents:
+    - ../../backlinks/making it explicit.yml
 ---
 [Author](/docs/phil/people/Robert Brandom.html)
 
